# llm-agent-pure-python

./: README.md  main.py  pyproject.toml
01-intro/: 01-basic.py  02.structured.py  03.tools.py  04.retrieval.py  a.json
02-workflow-calendar-agent/: 01-prompt-chaining.py  02.routing.py  03.parallel.py  04.orchestrator.py
